# WARNING: head commit changed in the meantime
sdcccdnnnn

--- a/eventoo/WebContent/main.html
+++ b/eventoo/WebContent/main.html
@@ -132,7 +132,7 @@
                 <!-- #tab1 end-->
                 <div id="tab2" class="tab_content">
                        <ul>
-                        <li><a href="disc/disc1.html">2017년에도 CGV에서 KT할인은 계속 된다!</a></li>
+                        <li><a href="disc/disc1.html">2017년에도 CGV에서 KT할인은 계속 된다!dddd</a></li>
                         <li><a href="disc/disc2.html">군인할인 정책 연장 안내</a></li>
                         <li><a href="disc/disc3.html">2017년 KT 더블할인 멤버십 시즌1</a></li>
                         <li><a href="disc/disc4.html">꼭 필요한 곳에서 더 커진 현대카드 혜택 150% 적립·할인</a></li>
