--- a/eventoo/WebContent/main.html
+++ b/eventoo/WebContent/main.html
@@ -152,7 +152,7 @@
                 <!-- #tab3 end-->
                 <div id="tab4" class="tab_content">
                        <ul>
-                        <li><a href="#">Rss_4</a></li>
+                        <li><a href="#">ㅎㅇㅎㅇㅎ</a></li>
                         <li><a href="#">Rss_4</a></li>
                         <li><a href="#">Rss_4</a></li>
                         <li><a href="#">Rss_4</a></li>
